# nec-converter

./: CMakeLists.txt  main.c  readme.md
include/: nec.h
src/: CMakeLists.txt  nec.c
tests/: CMakeLists.txt  test_nec.c
